[package]
name = "happytodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["secrets", "json" ] }
rocket_cors = "0.6.0-alpha2"
serde = "1.0.160"
tokio = { version = "1.27.0", features = ["full"]}
futures = "0.3.28"